--- a/Source/EventFlow.PostgreSQL/EventFlow.PostgreSQL.csproj
+++ b/Source/EventFlow.PostgreSQL/EventFlow.PostgreSQL.csproj
@@ -6,12 +6,12 @@
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-    <Title>EventFlow.Sql</Title>
+    <Title>EventFlow.PostgreSQL</Title>
     <Authors>Rasmus Mikkelsen</Authors>
     <Company>Rasmus Mikkelsen</Company>
     <Copyright>Copyright (c) Rasmus Mikkelsen 2015 - 2017</Copyright>
-    <Description>Generic SQL support for EventFlow</Description>
-    <PackageTags>CQRS ES event sourcing SQL</PackageTags>
+    <Description>PostgreSQL support for EventFlow</Description>
+    <PackageTags>CQRS ES event sourcing PostgreSQL</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/eventflow/EventFlow</RepositoryUrl>
     <PackageProjectUrl>http://docs.geteventflow.net/</PackageProjectUrl>
@@ -24,17 +24,19 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.2" />
-    <PackageReference Condition="'$(TargetFramework)' == 'netstandard1.6'" Include="System.ComponentModel.Annotations" Version="4.3.0" />
+    <EmbeddedResource Include="EventStores\Scripts\0001 - Create table EventFlow.sql" />
+    <EmbeddedResource Include="EventStores\Scripts\0002 - Create eventdatamodel_list_type.sql" />
+    <EmbeddedResource Include="SnapshotStores\Scripts\0001 - Create EventFlowSnapshots.sql" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EventFlow\EventFlow.csproj" />
+    <PackageReference Include="Npgsql" Version="3.2.2" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <ProjectReference Include="..\EventFlow.Sql\EventFlow.Sql.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
-    <PackageReference Include="dbup" Version="3.3.5" />
-    <PackageReference Include="dbup-postgresql" Version="3.3.5" />
+    <PackageReference Include="dbup-postgresql">
+      <Version>3.3.5</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
